workspace = { members = ["encryptor", "hash"] }
[package]
name = "my-pwd"
version = "0.1.0"
edition = "2021"
description = "A simple password manager"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "4.5.4", features = ["derive"] }
encryptor = { version = "0.1.0", path = "encryptor" }
