
[package]
name = "my-pwd"
version = "0.1.11"
edition = "2021"
description = "A simple password manager"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
